V0.16.2
---------
 * Also, take care of widgets without interior SVG elements on a menu that has a high contrast with the window (a possible scenario that hasn't happened with any theme so far).
 * A workaround for a rare problem in QWidgetAction when menus have a high contrast with windows.
 * Fixed the text color of thin progressbars inside stylable toolbars of dark-and-light themes.

V0.16.1
---------
 * Consider a toolbar stylable if it contains a tabbar that isn't inside the same window.
 * Be more explicit about the color group when getting colors from the standard palette.

V0.16.0
---------
 * Set the scroll indicator size of tabs to that of toolbar buttons.
 * Fixed a rare issue in the frame size of grouped elements.
 * Added an option to Kvantum Manager for enabling window translucency with non-integer scale factors after showing a warning.
 * A workaround for a rare case of Qt's contradicting QStyle in drawing spin boxes.
 * Fixed the height of combo menu separators.
 * Reset widget palettes on changing style from and to Kvantum. This fixes several problems with on-the-fly style changes, so that an app restart won't be needed in most cases.
 * Updated the code for Qt 5.15.
 * Added a workaround for a regression in Qt 5.15, which results in QStyleOptionTab reporting an incorrect tab position.

V0.15.3
---------
 * A better calculation of the part of a progressbar's internal text which is inside the indicator (this also fixes a small offset in KisSliderSpinBox).
 * Don't draw a progressbar's busy indicator if it's wider than the progressbar (although that never happens in practice).
 * Added a workaround for a new but small bug in the toolbar timer of Audacious 4.0.
 * Align a menu-item's text with others' if its icon isn't null but its pixmap is.
 * Removed Qt4 related stuff with the default installation, at last.

V0.15.2
---------
 * Restyle Kvantum Manager when tooltip delay is changed.